# backend/dtos/auth/PasswordReset.go
@@ -1,0 +1,15 @@
+package dtos_auth
+
+type ForgotPasswordDTO struct {
+	Email string `json:"email" binding:"required,email"`
+}
+
+type ResetPasswordDTO struct {
+	Email       string `json:"email" binding:"required,email"`
+	OTP         string `json:"otp" binding:"required"`
+	NewPassword string `json:"new_password" binding:"required,min=8"`
+}
+
+type VerifyEmailDTO struct {
+	Token string `json:"token" binding:"required"`
+}
