# backend/models/auth/User.go
@@ -7,14 +7,15 @@ import (
 )
 
 type User struct {
-	ID        uint           `gorm:"primaryKey" json:"id"`
-	Name      string         `gorm:"size:100;" json:"name"`
-	Username  string         `gorm:"size:100;" json:"username"`
-	Email     string         `gorm:"unique;not null" json:"email"`
-	Password  string         `json:"-"`
-	GithubID  string         `gorm:"uniqueIndex" json:"-"`
-	GoogleID  string         `gorm:"uniqueIndex" json:"-"`
-	CreatedAt time.Time      `json:"created_at"`
-	UpdatedAt time.Time      `json:"updated_at"`
-	DeletedAt gorm.DeletedAt `gorm:"index" json:"-"`
+	ID            uint           `gorm:"primaryKey" json:"id"`
+	Name          string         `gorm:"size:100;" json:"name"`
+	Username      string         `gorm:"size:100;" json:"username"`
+	Email         string         `gorm:"unique;not null" json:"email"`
+	EmailVerified bool           `gorm:"default:false" json:"email_verified"`
+	Password      string         `json:"-"`
+	GithubID      string         `gorm:"uniqueIndex" json:"-"`
+	GoogleID      string         `gorm:"uniqueIndex" json:"-"`
+	CreatedAt     time.Time      `json:"created_at"`
+	UpdatedAt     time.Time      `json:"updated_at"`
+	DeletedAt     gorm.DeletedAt `gorm:"index" json:"-"`
 }
