# backend/routes/auth_route.go
@@ -11,6 +11,10 @@ func AuthRoutes(r *gin.Engine) {
 	{
 		auth.POST("/login", controllers_auth.Login)
 		auth.POST("/register", controllers_auth.Register)
+		auth.POST("/forgot-password", controllers_auth.ForgotPassword)
+		auth.POST("/reset-password", controllers_auth.ResetPassword)
+		auth.POST("/verify-email", controllers_auth.VerifyEmail)
+		auth.POST("/resend-verification", controllers_auth.ResendVerificationEmail)
 		auth.GET("/github/callback", controllers_auth.GithubCallback)
 		auth.GET("/google/callback", controllers_auth.GoogleCallback)
 	}
